@@ -1,3 +1,10 @@
+2016-01-22  Bernd Schmidt <bschmidt@redhat.com>
+
+	PR target/63681
+	* cfgrtl.c (cfg_layout_initialize): Weaken assert to only trigger if
+	flag_reorder_blocks_and_partition.
+	* hw-doloop.c (reorg_loops): Avoid reordering if that flag is set.
+
 2016-01-21  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
 
 	Backported from mainline
